--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="hero-content">
             <h1>Nakul Bhadrecha</h1>
             <p>Capturing moments through my lens</p>
-            <a href="#" class="btn">View Gallary</a>
+            <a href="Gallery.html" class="btn">View Gallary</a>
         </div>
     </section>
 
@@ -102,7 +102,6 @@
             <div class="social-links">
                 <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                 <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-                <a href="#" aria-label="Twitter"><i class="fab fa-x-twitter"></i></a>
             </div>
 
             <p class="copyright">
@@ -150,5 +149,6 @@
 
     </script>
 </body>
+
 
 </html>
