--- a/Gallery.html
+++ b/Gallery.html
@@ -543,7 +543,7 @@
             <img src="https://instagram.fraj2-1.fna.fbcdn.net/v/t51.82787-15/535156780_18283257661287615_364811249984557543_n.webp?_nc_cat=103&ig_cache_key=MzcwMjU1MjgyNTU1MTc5NjIyMQ%3D%3D.3-ccb7-5&ccb=7-5&_nc_sid=58cdad&efg=eyJ2ZW5jb2RlX3RhZyI6InhwaWRzLjEwODB4MTQ0MC5zZHIuQzMifQ%3D%3D&_nc_ohc=2F_8MNs_-FAQ7kNvwFKXoxX&_nc_oc=AdnphWayxitMC3cJ9EiCRWd3_UlAcjyl7X_wEW7VdyvMnrf0DxHcyd-Gufu4CjcSiljhpVkASNKBFqraefvbKjBg&_nc_ad=z-m&_nc_cid=1012&_nc_zt=23&_nc_ht=instagram.fraj2-1.fna&_nc_gid=q-Yz_aPSP5Sh9hDIeFrsuA&oh=00_AfpxyDb1CtKBycnt2gkJQjoCdx0agJX64_350ybaBFqjvw&oe=6977F8DA"
                 alt="myself">
             <div class="caption">
-                <h3>Sudershan Setu</h3>
+                <h3>Sudarshan Setu</h3>
             </div>
         </div>
 
@@ -552,7 +552,7 @@
                 alt="myself">
             <div class="caption">
 
-                <h3>Sudershan Setu </h3>
+                <h3>Sudarshan Setu </h3>
             </div>
         </div>
 
@@ -619,5 +619,6 @@
         }
     </script>
 </body>
+
 
 </html>
