--- a/Gallery.html
+++ b/Gallery.html
@@ -579,7 +579,7 @@
             <h3 id="namefooter">Nakul Bhadrecha</h3>
             <p id="categoryfooter">Photography • Travel • Nature</p>
             <div class="social-links">
-                <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.instagram.com/nakulbhadrecha/" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                 <a href="#" aria-label="Twitter"><i class="fab fa-whatsapp"></i></a>
             </div>
             <p class="copyright">
@@ -622,3 +622,4 @@
 
 
 </html>
+
