Fix HTML encoding issues in Aboutme.html

--- a/Aboutme.html
+++ b/Aboutme.html
@@ -307,7 +307,7 @@
             <p>Photography • Travel • Nature</p>
 
             <div class="social-links">
-                <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.instagram.com/nakulbhadrecha/" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                 <a href="#" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
             </div>
 
@@ -322,5 +322,6 @@
         function closeMenu() { document.getElementById("sidebar").classList.remove("active"); }
     </script>
 </body>
+
 
 </html>
