--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <p>Photography • Travel • Nature</p>
 
             <div class="social-links">
-                <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.instagram.com/nakulbhadrecha/" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                 <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
             </div>
 
@@ -152,3 +152,4 @@
 
 
 </html>
+
