--- a/Aboutme.html
+++ b/Aboutme.html
@@ -308,7 +308,7 @@
 
             <div class="social-links">
                 <a href="https://www.instagram.com/nakulbhadrecha/" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                <a href="#" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
+                <a href="https://wa.me/919327322975"><i class="fab fa-whatsapp"></i></a>
             </div>
 
             <p class="copyright">
@@ -325,3 +325,4 @@
 
 
 </html>
+
