--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
             <p>Photography • Travel • Nature</p>
 
             <div class="social-links">
-                <a href="https://www.instagram.com/nakulbhadrecha/" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+               <a href="https://www.instagram.com/nakulbhadrecha/" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                <a href="https://wa.me/919327322975"><i class="fab fa-whatsapp"></i></a>
             </div>
 
             <p class="copyright">
@@ -152,4 +152,5 @@
 
 
 </html>
+
 
