--- a/Gallery.html
+++ b/Gallery.html
@@ -561,7 +561,7 @@
                 alt="myself">
             <div class="caption">
 
-                <h3>Shivrajput Beach</h3>
+                <h3>Shivrajpur Beach</h3>
             </div>
         </div>
 
@@ -622,6 +622,7 @@
 
 
 </html>
+
 
 
 
