--- a/Gallery.html
+++ b/Gallery.html
@@ -372,7 +372,7 @@
     </div>
 
     <div class="intro-section">
-        <h1 style="color: #977a29;">Visual Discovery</h1>
+        <h1 style="color: #977a29;">Wander Explorer</h1>
         <p class="visual-text">
             I love traveling and exploring new places, as it helps me discover the beauty of the world.
             Traveling is my hobby, and I enjoy clicking pictures of nature, moments, and special moments.
@@ -622,6 +622,7 @@
 
 
 </html>
+
 
 
 
