--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 
     <center>
-        <button class="btn-view-more">Browse more photos</button>
+        <button href="Gallery.html" class="btn-view-more">Browse more photos</button>
         <br><br><br><br>
 
         <h2 id="timeless">Timeless Stones</h2>
@@ -152,5 +152,6 @@
 
 
 </html>
+
 
 
