--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 
     <center>
-        <button href="Gallery.html" class="btn-view-more">Browse more photos</button>
+        <a href="Gallery.html" class="btn-view-more">Browse more photos</a>
         <br><br><br><br>
 
         <h2 id="timeless">Timeless Stones</h2>
@@ -100,8 +100,8 @@
             <p>Photography • Travel • Nature</p>
 
             <div class="social-links">
-               <a href="https://www.instagram.com/nakulbhadrecha/" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                <a href="https://wa.me/919327322975"><i class="fab fa-whatsapp"></i></a>
+                <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
             </div>
 
             <p class="copyright">
@@ -150,8 +150,4 @@
     </script>
 </body>
 
-
 </html>
-
-
-
