--- a/Aboutme.html
+++ b/Aboutme.html
@@ -256,8 +256,8 @@
         <div class="logo">Bhadrecha Nakul</div>
         <nav class="nav-links">
             <a href="index.html">Home</a>
-            <a href="Gallery.html">Gallery</a>
             <a href="Aboutme.html">About</a>
+            <a href="Gallery.html">Gallery</a>
         </nav>
         <i class=" fas fa-bars menu-btn" onclick="openMenu()" style="cursor:pointer;"></i>
     </header>
@@ -277,8 +277,8 @@
         </div>
 
         <div class="about-content">
-            <span style="color: var(--primary-color); font-weight: bold; text-transform: uppercase;">Explorer &
-                Photographer</span>
+            <span style="color: var(--primary-color); font-weight: bold; text-transform: uppercase;">Wanderer &
+                explorer</span>
             <h1>Capturing the world through my lens.</h1>
 
             <p>
@@ -307,8 +307,8 @@
             <p>Photography • Travel • Nature</p>
 
             <div class="social-links">
-                <a href="https://www.instagram.com/nakulbhadrecha/" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                <a href="https://wa.me/919327322975"><i class="fab fa-whatsapp"></i></a>
+                <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                <a href="#" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
             </div>
 
             <p class="copyright">
@@ -323,6 +323,4 @@
     </script>
 </body>
 
-
 </html>
-
